# Palestra3000-Python

./: .gitignore  Palestra3000.spec  alembic.ini  config.json  main.py  palestra3000.db  pyproject.toml  requirements.txt
Ricevute/: Ricevuta_Notaro_Gabriele_223155.html
alembic/: env.py
alembic/versions/: 99652089f5b4_initial_migration.py
core/: config.py  database.py  repositories.py  services.py  utils.py
core/backups/: palestra_backup_20260421_134638.db
core/config/: __init__.py  database_config.py  hardware_config.py  settings.py
core/models/: __init__.py  activity.py  booking.py  dashboard.py  lesson.py  member.py  tier.py
core/repositories/: __init__.py  activity_repository.py  base.py  booking_repository.py  dashboard_repository.py  lesson_repository.py  member_repository.py  tier_repository.py
core/services/: __init__.py  access_service.py  audio_service.py  database_service.py  hardware_service.py
src/data/: config.json  palestra3000.db
src/pkg/config/: app_config.py  db_config.py
src/pkg/dependency/: dependencies.py
src/pkg/models/: __init__.py  activity.py  booking.py  lesson.py  member.py  models.py  tier.py
src/pkg/repository/: activity_repository.py  base_repository.py  booking_repository.py  dashboard_repository.py  lesson_repository.py  member_repository.py  tier_repository.py
src/pkg/service/: access_service.py  audio_service.py  hardware_service.py
src/pkg/utility/: utils.py
src/pkg/view/: attivita_window.py  calendario_window.py  (+6 more)
tests/: conftest.py  test_database.py  test_tariffe_window.py
ui/: attivita_window.py  calendario_window.py  lezioni_window.py  prenotazioni_window.py  settings_window.py  soci_window.py  tariffe_window.py  tornello_window.py
