[project]
name = "palestra3000-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "altgraph==0.17.5",
    "colorama==0.4.6",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "greenlet==3.3.2",
    "iniconfig==2.3.0",
    "packaging==26.0",
    "pefile==2024.8.26",
    "pillow==12.1.1",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.1",
    "pyserial==3.5",
    "pytest==9.0.2",
    "pywin32-ctypes==0.2.3",
    "setuptools==82.0.0",
    "sqlalchemy==2.0.47",
    "typing-extensions==4.15.0",
]
