[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "palestra3000-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "alembic>=1.18.4",
    "altgraph==0.17.5",
    "colorama==0.4.6",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "greenlet==3.5.0",
    "iniconfig==2.3.0",
    "packaging==26.1",
    "pefile==2024.8.26",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.4",
    "pyserial==3.5",
    "pytest==9.0.3",
    "pywin32-ctypes==0.2.3",
    "setuptools==82.0.1",
    "sqlalchemy==2.0.49",
    "typing-extensions==4.15.0",
]

[project.scripts]
main = "main:bootstrap"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
